--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -10,7 +10,213 @@ ENV SUPERSET_VIRTUALENV="${SUPERSET_HOME}/venv"\
     ADMIN_LASTNAME="User" \
     ADMIN_EMAIL="admin@superset.apache.org" \
     ADMIN_PASSWORD="admin" \
-    LOAD_EXAMPLES="true"
+    LOAD_EXAMPLES="false" \
+    SUPERSET_MAX_RETRY_TIMES="-1" \
+    SUPERSET_RETRY_INTERVAL_IN_SECS="2" \
+    APP_ICON="/static/assets/images/superset-logo@2x.png" \
+    APP_ICON_WIDTH="126" \
+    APP_NAME="Superset" \
+    AUTH_TYPE="db" \
+    BABEL_DEFAULT_LOCALE="en" \
+    BABEL_DEFAULT_FOLDER="superset/translations" \
+    BACKUP_COUNT="30" \
+    BUG_REPORT_URL="NULL" \
+    CACHE_CONFIG_CACHE_TYPE="null" \
+    CACHE_CONFIG_CACHE_NO_NULL_WARNING="NULL" \
+    CACHE_CONFIG_CACHE_DEFAULT_TIMEOUT="NULL" \
+    CACHE_CONFIG_CACHE_THRESHOLD="NULL" \
+    CACHE_CONFIG_CACHE_KEY_PREFIX="NULL" \
+    CACHE_CONFIG_CACHE_MEMCACHED_SERVERS="NULL" \
+    CACHE_CONFIG_CACHE_MEMCACHED_USERNAME="NULL" \
+    CACHE_CONFIG_CACHE_MEMCACHED_PASSWORD="NULL" \
+    CACHE_CONFIG_CACHE_REDIS_HOST="NULL" \
+    CACHE_CONFIG_CACHE_REDIS_PORT="6379" \
+    CACHE_CONFIG_CACHE_REDIS_DB="0" \
+    CACHE_CONFIG_CACHE_DIR="NULL" \
+    CACHE_DEFAULT_TIMEOUT="86400" \
+    CELERY_BROKER_TYPE="redis" \
+    CELERY_BROKER_USERNAME="NULL" \
+    CELERY_BROKER_PASSWORD="NULL" \
+    CELERY_BROKER_HOST="NULL"\
+    CELERY_BROKER_PORT="NULL" \
+    CELERY_BROKER_DATABASE="NULL" \
+    CELERYD_LOG_LEVEL="DEBUG" \
+    CELERY_ACKS_LATE="False" \
+    CELERY_SQLLAB_GET_RESULTS_RATE_LIMIT_IN_SECS="100" \
+    CELERY_EMAIL_REPORTS_SEND_RATE_LIMIT_IN_SECS="1" \
+    CELERY_EMAIL_REPORTS_TIME_LIMIT="120" \
+    CELERY_EMAIL_REPORTS_SOFT_TIME_LIMIT="150" \
+    CELERY_EMAIL_REPORTS_IGNORE_RESULT="True" \
+    CORS_OPTIONS_ORIGINS="*" \
+    CORS_OPTIONS_METHODS="GET,HEAD,POST,OPTIONS,PUT,PATCH,DELETE" \
+    CORS_OPTIONS_EXPOSE_HEADERS="NULL" \
+    CORS_OPTIONS_ALLOW_HEADERS="*" \
+    CORS_OPTIONS_SEND_WILDCARD="False" \
+    CORS_OPTIONS_VARY_HEADER="True" \
+    CSV_TO_HIVE_UPLOAD_S3_BUCKET="NULL" \
+    CSV_TO_HIVE_UPLOAD_DIRECTORY="EXTERNAL_HIVE_TABLES/" \
+    DASHBOARD_TEMPLATE_ID="NULL" \
+    DEBUG="False" \
+    DEFAULT_DB_ID="NULL" \
+    DEFAULT_RELATIVE_START_TIME="today" \
+    DEFAULT_RELATIVE_END_TIME="today" \
+    DEFAULT_SQLLAB_LIMIT="1000" \
+    DISPLAY_MAX_ROW_LIMIT="10000" \
+    DOCUMENTATION_URL="NULL" \
+    DOCUMENTATION_TEXT="Documentation" \
+    DOCUMENTATION_ICON="NULL" \
+    DRUID_ANALYSIS_TYPES="cardinality" \
+    DRUID_DATA_SOURCE_BLACKLIST="NULL" \
+    DRUID_IS_ACTIVE="False" \
+    DRUID_METADATA_LINKS_ENABLED="True" \
+    DRUID_TZ="utc" \
+    EMAIL_ASYNC_TIME_LIMIT_SEC="300" \
+    EMAIL_NOTIFICATIONS="False" \
+    EMAIL_REPORT_BCC_ADDRESS="NULL" \
+    EMAIL_REPORT_FROM_ADDRESS="reports@superset.org" \
+    EMAIL_REPORTS_CRON_RESOLUTION="15" \
+    EMAIL_REPORTS_USER="admin" \
+    EMAIL_REPORTS_SUBJECT_PREFIX="[Report] " \
+    EMAIL_REPORTS_WEBDRIVER="firefox" \
+    ENABLE_ACCESS_REQUEST="False" \
+    ENABLE_CHUNK_ENCODING="False" \
+    ENABLE_CORS="False" \
+    ENABLE_FLASK_COMPRESS="True" \
+    ENABLE_JAVASCRIPT_CONTROLS="False" \
+    ENABLE_PROXY_FIX="False" \
+    ENABLE_REACT_CRUD_VIEWS="False" \
+    ENABLE_SCHEDULED_EMAIL_REPORTS="False" \
+    ENABLE_TIME_ROTATE="False" \
+    FAB_ADD_SECURITY_PERMISSION_VIEW="False" \
+    FAB_ADD_SECURITY_PERMISSION_VIEWS_VIEW="False" \
+    FAB_ADD_SECURITY_VIEW_MENU_VIEW="False" \
+    FAB_ADD_SECURITY_VIEWS="False" \
+    FAB_API_SWAGGER_UI="True" \
+    FEATURE_FLAG_CLIENT_CACHE="False" \
+    FEATURE_FLAG_ENABLE_EXPLORE_JSON_CSRF_PROTECTION="False" \
+    FEATURE_FLAG_KV_STORE="False" \
+    FEATURE_FLAG_PRESTO_EXPAND_DATA="False" \
+    FEATURE_FLAG_THUMBNAILS="False" \
+    FEATURE_FLAG_REDUCE_DASHBOARD_BOOTSTRAP_PAYLOAD="True" \
+    FEATURE_FLAG_SHARE_QUERIES_VIA_KV_STORE="False" \
+    FEATURE_FLAG_SIP_38_VIZ_REARCHITECTURE="False" \
+    FEATURE_FLAG_TAGGING_SYSTEM="False" \
+    FEATURE_FLAG_SQLLAB_BACKEND_PERSISTENCE="False" \
+    FEATURE_FLAG_LIST_VIEWS_NEW_UI="False" \
+    FILTER_SELECT_ROW_LIMIT="10000" \
+    FLASK_USE_RELOAD="True" \
+    HIVE_POLL_INTERVAL="5" \
+    INTERVAL="1" \
+    LOG_FORMAT="%(asctime)s:%(levelname)s:%(name)s:%(message)s" \
+    LOG_LEVEL="DEBUG" \
+    LOGO_TARGET_PATH="NULL" \
+    MAX_TABLE_NAMES="3000" \
+    MAPBOX_API_KEY="NULL" \
+    PERMISSION_INSTRUCTIONS_LINK="NULL" \
+    PREVENT_UNSAFE_DB_CONNECTIONS="True" \
+    PROXY_FIX_CONFIG_X_FOR="1" \
+    PROXY_FIX_CONFIG_X_PROTO="1" \
+    PROXY_FIX_CONFIG_X_HOST="1" \
+    PROXY_FIX_CONFIG_X_PREFIX="1" \
+    PUBLIC_ROLE_LIKE_GAMMA="False" \
+    RESULTS_BACKEND_TYPE="null" \
+    RESULTS_BACKEND_DEFAULT_TIMEOUT="300.0" \
+    RESULTS_BACKEND_THRESHOLD="10" \
+    RESULTS_BACKEND_REDIS_HOST="NULL" \
+    RESULTS_BACKEND_REDIS_PORT="6379" \
+    RESULTS_BACKEND_REDIS_PASSWORD="NULL" \
+    RESULTS_BACKEND_REDIS_KEY_PREFIX="superset_results" \
+    RESULTS_BACKEND_REDIS_DB="0" \
+    RESULTS_BACKEND_MEMCACHED_SERVERS="NULL" \
+    RESULTS_BACKEND_MEMCACHED_KEY_PREFIX="superset_results" \
+    RESULTS_BACKEND_FILESYSTEM_CACHE_DIR="NULL" \
+    RESULTS_BACKEND_FILESYSTEM_MODE="NULL" \
+    ROLLOVER="midnight" \
+    ROW_LIMIT="50000" \
+    SCHEDULED_EMAIL_DEBUG_MODE="False" \
+    SECRET_KEY="\1\2thisismysecretkey\1\2\e\y\y\h" \
+    SEND_FILE_MAX_AGE_DEFAULT="31536000" \
+    SESSION_COOKIE_HTTPONLY="True" \
+    SESSION_COOKIE_SAMESITE="Lax" \
+    SESSION_COOKIE_SECURE="False" \
+    SHOW_STACKTRACE="True" \
+    SILENCE_FAB="True" \
+    SIP_15_DEFAULT_TIME_RANGE_ENDPOINTS="unknown,inclusive" \
+    SIP_15_ENABLED="True" \
+    SIP_15_GRACE_PERIOD_END="NULL" \
+    SMTP_HOST="localhost" \
+    SMTP_MAIL_FROM="superset@superset.org" \
+    SMTP_PASSWORD="superset" \
+    SMTP_PORT="25" \
+    SMTP_STARTTLS="True" \
+    SMTP_SSL="False" \
+    SMTP_USER="superset" \
+    SSL_CERT_PATH="NULL" \
+    SUPERSET_DASHBOARD_POSITION_DATA_LIMIT="65535" \
+    SUPERSET_LOG_VIEW="True" \
+    SUPERSET_WEBSERVER_ADDRESS="0.0.0.0" \
+    SUPERSET_WEBSERVER_PORT="8088" \
+    SUPERSET_WEBSERVER_PROTOCOL="http" \
+    SUPERSET_WEBSERVER_TIMEOUT="60" \
+    SQL_MAX_ROW="100000" \
+    SQLALCHEMY_TRACK_MODIFICATIONS="False" \
+    METADATA_DB_TYPES="postgresql" \
+    METADATA_DB_USERNAME="NULL" \
+    METADATA_DB_PASSWORD="NULL" \
+    METADATA_DB_HOST="NULL" \
+    METADATA_DB_PORT="NULL" \
+    METADATA_DB_DATABASE="NULL" \
+    SQLLAB_ASYNC_TIME_LIMIT_SEC="21600" \
+    SQLLAB_CTAS_NO_LIMIT="False" \
+    SQLLAB_DEFAULT_DBID="NULL" \
+    SQLLAB_SAVE_WARNING_MESSAGE="NULL" \
+    SQLLAB_SCHEDULE_WARNING_MESSAGE="NULL" \
+    SQLLAB_TIMEOUT="30" \
+    SQLLAB_VALIDATION_TIMEOUT="10" \
+    SQLLAB_QUERY_COST_ESTIMATE_TIMEOUT="10" \
+    TABLE_NAMES_CACHE_CONFIG_CACHE_TYPE="null" \
+    TABLE_NAMES_CACHE_CONFIG_CACHE_NO_NULL_WARNING="NULL" \
+    TABLE_NAMES_CACHE_CONFIG_CACHE_DEFAULT_TIMEOUT="NULL" \
+    TABLE_NAMES_CACHE_CONFIG_CACHE_THRESHOLD="NULL" \
+    TABLE_NAMES_CACHE_CONFIG_CACHE_KEY_PREFIX="NULL" \
+    TABLE_NAMES_CACHE_CONFIG_CACHE_MEMCACHED_SERVERS="NULL" \
+    TABLE_NAMES_CACHE_CONFIG_CACHE_MEMCACHED_USERNAME="NULL" \
+    TABLE_NAMES_CACHE_CONFIG_CACHE_MEMCACHED_PASSWORD="NULL" \
+    TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_HOST="NULL" \
+    TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_PORT="6379" \
+    TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_DB="0" \
+    TABLE_NAMES_CACHE_CONFIG_CACHE_DIR="NULL" \
+    TALISMAN_ENABLED="False" \
+    TALISMAN_CONFIG_CONTENT_SECURITY_POLICY="NULL" \
+    TALISMAN_CONFIG_FORCE_HTTPS="True" \
+    TALISMAN_CONFIG_FORCE_HTTPS_PERMANENT="False" \
+    THUMBNAIL_CACHE_CONFIG_CACHE_TYPE="null" \
+    THUMBNAIL_CACHE_CONFIG_CACHE_NO_NULL_WARNING="NULL" \
+    THUMBNAIL_CACHE_CONFIG_CACHE_DEFAULT_TIMEOUT="NULL" \
+    THUMBNAIL_CACHE_CONFIG_CACHE_THRESHOLD="NULL" \
+    THUMBNAIL_CACHE_CONFIG_CACHE_KEY_PREFIX="NULL" \
+    THUMBNAIL_CACHE_CONFIG_CACHE_MEMCACHED_SERVERS="NULL" \
+    THUMBNAIL_CACHE_CONFIG_CACHE_MEMCACHED_USERNAME="NULL" \
+    THUMBNAIL_CACHE_CONFIG_CACHE_MEMCACHED_PASSWORD="NULL" \
+    THUMBNAIL_CACHE_CONFIG_CACHE_REDIS_HOST="NULL" \
+    THUMBNAIL_CACHE_CONFIG_CACHE_REDIS_PORT="6379" \
+    THUMBNAIL_CACHE_CONFIG_CACHE_REDIS_DB="0" \
+    THUMBNAIL_CACHE_CONFIG_CACHE_DIR="NULL" \
+    THUMBNAIL_SELENIUM_USER="Admin" \
+    TIME_ROTATE_LOG_LEVEL="DEBUG" \
+    TROUBLESHOOTING_LINK="NULL" \
+    VIZ_TYPE_BLACKLIST="NULL" \
+    VIZ_ROW_LIMIT="10000" \
+    WARNING_MSG="NULL" \
+    WEBDRIVER_BASEURL="http://0.0.0.0:8080/" \
+    WEBDRIVER_WINDOW_DASHBOARD_WIDTH="1600" \
+    WEBDRIVER_WINDOW_DASHBOARD_HEIGHT="2000" \
+    WEBDRIVER_WINDOW_SLICE_WIDTH="3000" \
+    WEBDRIVER_WINDOW_SLICE_HEIGHT="1200" \
+    WTF_CSRF_ENABLED="True" \
+    WTF_CSRF_EXEMPT_LIST="superset.views.core.log" \
+    WTF_CSRF_TIME_LIMIT="604800" \
+    QUERY_SEARCH_LIMIT="1000"
 ENV PATH=${SUPERSET_VIRTUALENV}/bin:$PATH \
     PYTHONUNBUFFERED=1
 
@@ -28,7 +234,8 @@ RUN apt-get update && \
                        libmariadb-dev \
                        unixodbc \
                        unixodbc-dev \
-                       procps && \
+                       procps \
+                       netcat && \
     pip install --upgrade setuptools pip virtualenv && \
     mkdir -p ${SUPERSET_VIRTUALENV} && \
     virtualenv -p python3 ${SUPERSET_VIRTUALENV} && \
