--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -5,6 +5,7 @@ MAINTAINER <mutlupolatcan@gmail.com> Mutlu Polatcan
 ENV SUPERSET_HOME="/superset"
 ENV SUPERSET_VIRTUALENV="${SUPERSET_HOME}/venv"\
     SUPERSET_CONFIG_PATH="${SUPERSET_HOME}/superset_config.py" \
+    SUPERSET_DAEMONS="NULL" \
     ADMIN_USERNAME="admin" \
     ADMIN_FIRSTNAME="Admin" \
     ADMIN_LASTNAME="User" \
@@ -31,6 +32,7 @@ ENV SUPERSET_VIRTUALENV="${SUPERSET_HOME}/venv"\
     CACHE_CONFIG_CACHE_MEMCACHED_PASSWORD="NULL" \
     CACHE_CONFIG_CACHE_REDIS_HOST="NULL" \
     CACHE_CONFIG_CACHE_REDIS_PORT="6379" \
+    CACHE_CONFIG_CACHE_REDIS_PASSWORD="NULL" \
     CACHE_CONFIG_CACHE_REDIS_DB="0" \
     CACHE_CONFIG_CACHE_DIR="NULL" \
     CACHE_DEFAULT_TIMEOUT="86400" \
@@ -61,7 +63,7 @@ ENV SUPERSET_VIRTUALENV="${SUPERSET_HOME}/venv"\
     DEFAULT_RELATIVE_START_TIME="today" \
     DEFAULT_RELATIVE_END_TIME="today" \
     DEFAULT_SQLLAB_LIMIT="1000" \
-    DISPLAY_MAX_ROW_LIMIT="10000" \
+    DISPLAY_MAX_ROW="10000" \
     DOCUMENTATION_URL="NULL" \
     DOCUMENTATION_TEXT="Documentation" \
     DOCUMENTATION_ICON="NULL" \
@@ -184,6 +186,7 @@ ENV SUPERSET_VIRTUALENV="${SUPERSET_HOME}/venv"\
     TABLE_NAMES_CACHE_CONFIG_CACHE_MEMCACHED_PASSWORD="NULL" \
     TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_HOST="NULL" \
     TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_PORT="6379" \
+    TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_PASSWORD="NULL" \
     TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_DB="0" \
     TABLE_NAMES_CACHE_CONFIG_CACHE_DIR="NULL" \
     TALISMAN_ENABLED="False" \
@@ -200,6 +203,7 @@ ENV SUPERSET_VIRTUALENV="${SUPERSET_HOME}/venv"\
     THUMBNAIL_CACHE_CONFIG_CACHE_MEMCACHED_PASSWORD="NULL" \
     THUMBNAIL_CACHE_CONFIG_CACHE_REDIS_HOST="NULL" \
     THUMBNAIL_CACHE_CONFIG_CACHE_REDIS_PORT="6379" \
+    THUMBNAIL_CACHE_CONFIG_CACHE_REDIS_PASSWORD="NULL" \
     THUMBNAIL_CACHE_CONFIG_CACHE_REDIS_DB="0" \
     THUMBNAIL_CACHE_CONFIG_CACHE_DIR="NULL" \
     THUMBNAIL_SELENIUM_USER="Admin" \
