default configuration variables updated

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -59,7 +59,6 @@ ENV SUPERSET_VIRTUALENV="${SUPERSET_HOME}/venv"\
     CSV_TO_HIVE_UPLOAD_DIRECTORY="EXTERNAL_HIVE_TABLES/" \
     DASHBOARD_TEMPLATE_ID="NULL" \
     DEBUG="False" \
-    DEFAULT_DB_ID="NULL" \
     DEFAULT_RELATIVE_START_TIME="today" \
     DEFAULT_RELATIVE_END_TIME="today" \
     DEFAULT_SQLLAB_LIMIT="1000" \
@@ -92,7 +91,7 @@ ENV SUPERSET_VIRTUALENV="${SUPERSET_HOME}/venv"\
     FAB_ADD_SECURITY_PERMISSION_VIEW="False" \
     FAB_ADD_SECURITY_PERMISSION_VIEWS_VIEW="False" \
     FAB_ADD_SECURITY_VIEW_MENU_VIEW="False" \
-    FAB_ADD_SECURITY_VIEWS="False" \
+    FAB_ADD_SECURITY_VIEWS="True" \
     FAB_API_SWAGGER_UI="True" \
     FEATURE_FLAG_CLIENT_CACHE="False" \
     FEATURE_FLAG_ENABLE_EXPLORE_JSON_CSRF_PROTECTION="False" \
@@ -113,8 +112,8 @@ ENV SUPERSET_VIRTUALENV="${SUPERSET_HOME}/venv"\
     LOG_LEVEL="DEBUG" \
     LOGO_TARGET_PATH="NULL" \
     MAX_TABLE_NAMES="3000" \
-    MAPBOX_API_KEY="NULL" \
-    PERMISSION_INSTRUCTIONS_LINK="NULL" \
+    MAPBOX_API_KEY="" \
+    PERMISSION_INSTRUCTIONS_LINK="" \
     PREVENT_UNSAFE_DB_CONNECTIONS="True" \
     PROXY_FIX_CONFIG_X_FOR="1" \
     PROXY_FIX_CONFIG_X_PROTO="1" \
@@ -170,7 +169,6 @@ ENV SUPERSET_VIRTUALENV="${SUPERSET_HOME}/venv"\
     METADATA_DB_DATABASE="NULL" \
     SQLLAB_ASYNC_TIME_LIMIT_SEC="21600" \
     SQLLAB_CTAS_NO_LIMIT="False" \
-    SQLLAB_DEFAULT_DBID="NULL" \
     SQLLAB_SAVE_WARNING_MESSAGE="NULL" \
     SQLLAB_SCHEDULE_WARNING_MESSAGE="NULL" \
     SQLLAB_TIMEOUT="30" \
@@ -208,7 +206,7 @@ ENV SUPERSET_VIRTUALENV="${SUPERSET_HOME}/venv"\
     THUMBNAIL_CACHE_CONFIG_CACHE_DIR="NULL" \
     THUMBNAIL_SELENIUM_USER="Admin" \
     TIME_ROTATE_LOG_LEVEL="DEBUG" \
-    TROUBLESHOOTING_LINK="NULL" \
+    TROUBLESHOOTING_LINK="" \
     VIZ_TYPE_BLACKLIST="NULL" \
     VIZ_ROW_LIMIT="10000" \
     WARNING_MSG="NULL" \
