entrypoint.sh updated

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -161,7 +161,7 @@ ENV SUPERSET_VIRTUALENV="${SUPERSET_HOME}/venv"\
     SUPERSET_WEBSERVER_TIMEOUT="60" \
     SQL_MAX_ROW="100000" \
     SQLALCHEMY_TRACK_MODIFICATIONS="False" \
-    METADATA_DB_TYPES="postgresql" \
+    METADATA_DB_TYPE="postgresql" \
     METADATA_DB_USERNAME="NULL" \
     METADATA_DB_PASSWORD="NULL" \
     METADATA_DB_HOST="NULL" \
