--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,14 +8,22 @@ services:
       SUPERSET_DAEMONS: |
         init
         webserver
+      SUPERSET_DEPLOY_MODE: "local"
       METADATA_DB_TYPE: "postgresql"
       METADATA_DB_HOST: "postgres"
       METADATA_DB_PORT: "5432"
       METADATA_DB_USERNAME: "admin"
       METADATA_DB_PASSWORD: "admin"
       METADATA_DB_DATABASE: "admin"
+      CELERY_BROKER_TYPE: "redis"
+      CELERY_BROKER_HOST: "redis"
+      CELERY_BROKER_PORT: "6379"
+      CELERY_BROKER_DATABASE: "0"
+      RESULTS_BACKEND_TYPE: "redis"
+      RESULTS_BACKEND_REDIS_HOST: "redis"
+      RESULTS_BACKEND_REDIS_DB: "0"
       SUPERSET_MAX_RETRY_TIMES: "-1"
-      LOAD_EXAMPLES: "True"
+      LOAD_EXAMPLES: "true"
     ports:
       - 8088:8088
 
@@ -25,10 +33,19 @@ services:
       SUPERSET_DAEMONS: |
         worker
       SUPERSET_MAX_RETRY_TIMES: "-1"
+      METADATA_DB_TYPE: "postgresql"
+      METADATA_DB_HOST: "postgres"
+      METADATA_DB_PORT: "5432"
+      METADATA_DB_USERNAME: "admin"
+      METADATA_DB_PASSWORD: "admin"
+      METADATA_DB_DATABASE: "admin"
       CELERY_BROKER_TYPE: "redis"
       CELERY_BROKER_HOST: "redis"
       CELERY_BROKER_PORT: "6379"
       CELERY_BROKER_DATABASE: "0"
+      RESULTS_BACKEND_TYPE: "redis"
+      RESULTS_BACKEND_REDIS_HOST: "redis"
+      RESULTS_BACKEND_REDIS_DB: "0"
 
   postgres:
     image: postgres
