memcached servers healthchecks fixed

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -38,6 +38,8 @@ ENV SUPERSET_VIRTUALENV="${SUPERSET_HOME}/venv"\
     CACHE_CONFIG_CACHE_DIR="NULL" \
     CACHE_DEFAULT_TIMEOUT="86400" \
     CELERY_BROKER_TYPE="redis" \
+    CELERY_BROKER_POOL_TYPE="prefork" \
+    CELERY_BROKER_CONCURRENCY="4" \
     CELERY_BROKER_USERNAME="NULL" \
     CELERY_BROKER_PASSWORD="NULL" \
     CELERY_BROKER_HOST="NULL"\
