cache_default_timeout value type fixed

--- a/docker/docker-compose-prod-memcached.yml
+++ b/docker/docker-compose-prod-memcached.yml
@@ -4,6 +4,7 @@ services:
     image: mpolatcan/superset:dev
     container_name: superset-webserver
     hostname: superset-webserver
+    entrypoint: sleep infinity
     env_file:
       - prod-memcached.env
     environment:
@@ -15,6 +16,7 @@ services:
 
   superset-worker:
     image: mpolatcan/superset:dev
+    entrypoint: sleep infinity
     env_file:
       - prod-memcached.env
     environment:
