--- a/docker/prod-redis.env
+++ b/docker/prod-redis.env
@@ -14,5 +14,5 @@ RESULTS_BACKEND_REDIS_HOST=redis
 RESULTS_BACKEND_REDIS_DB=0
 SUPERSET_MAX_RETRY_TIMES=-1
 FEATURE_FLAG_SQLLAB_BACKEND_PERSISTENCE=true
-LOAD_EXAMPLES=true
+LOAD_EXAMPLES=false
 FEATURE_FLAG_SIP_38_VIZ_REARCHITECTURE=true
