--- a/docker/prod-redis.env
+++ b/docker/prod-redis.env
@@ -13,6 +13,12 @@ RESULTS_BACKEND_TYPE=redis
 RESULTS_BACKEND_REDIS_HOST=redis
 RESULTS_BACKEND_REDIS_DB=0
 SUPERSET_MAX_RETRY_TIMES=-1
+CACHE_CONFIG_CACHE_TYPE=redis
+CACHE_CONFIG_CACHE_REDIS_HOST=redis
+CACHE_CONFIG_CACHE_REDIS_DB=1
+TABLE_NAMES_CACHE_CONFIG_CACHE_TYPE=redis
+TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_HOST=redis
+TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS-DB=2
 FEATURE_FLAG_SQLLAB_BACKEND_PERSISTENCE=true
 LOAD_EXAMPLES=false
 FEATURE_FLAG_SIP_38_VIZ_REARCHITECTURE=true
