statsd dependency added

--- a/docker/prod-redis.env
+++ b/docker/prod-redis.env
@@ -1,6 +1,6 @@
 METADATA_DB_TYPE=postgresql
 METADATA_DB_HOST=postgres
-METADATA_DB_PORT=5432
+METADATA_DBi_PORT=5432
 METADATA_DB_USERNAME=admin
 METADATA_DB_PASSWORD=admin
 METADATA_DB_DATABASE=admin
