cache warmup env var bug fix

--- a/docker/prod-redis.env
+++ b/docker/prod-redis.env
@@ -12,6 +12,7 @@ RESULTS_BACKEND_TYPE=redis
 RESULTS_BACKEND_REDIS_HOST=redis
 RESULTS_BACKEND_REDIS_DB=0
 SUPERSET_MAX_RETRY_TIMES=-1
+ENABLE_CACHE_WARMUP=true
 CACHE_CONFIG_CACHE_TYPE=redis
 CACHE_CONFIG_CACHE_REDIS_HOST=redis
 CACHE_CONFIG_CACHE_REDIS_DB=1
@@ -21,3 +22,4 @@ TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS-DB=2
 FEATURE_FLAG_SQLLAB_BACKEND_PERSISTENCE=true
 LOAD_EXAMPLES=false
 FEATURE_FLAG_SIP_38_VIZ_REARCHITECTURE=true
+CACHE_WARMUPS=[{"schedule": "* * * * *", "kwargs": {"strategy": "dummy"}},{"schedule": "* * * * *","kwargs": {"strategy": "top_n_dashboards", "top_n": 5, "since": "7 days ago"}},{"schedule": "* * * * *","kwargs": {"strategy": "dashboard_tags", "tags": ["a", "b", "c"]}}]
