non-root superset user added

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,18 +1,20 @@
-# TODO Superset user (non-root) will be created
 FROM python:3.7-slim
 
 MAINTAINER <mutlupolatcan@gmail.com> Mutlu Polatcan
 
-ENV SUPERSET_HOME="/superset"
-ENV SUPERSET_VIRTUALENV="${SUPERSET_HOME}/venv"\
-    SUPERSET_CONFIG_PATH="${SUPERSET_HOME}/superset_config.py" \
+ENV SUPERSET_USER_HOME="/home/superset"
+ENV SUPERSET_HOME="${SUPERSET_USER_HOME}/superset" \
+    SUPERSET_VIRTUALENV="${SUPERSET_USER_HOME}/superset/venv"\
+    SUPERSET_CONFIG_PATH="${SUPERSET_HOME}/superset/superset_config.py" \
     SUPERSET_DAEMONS="NULL"
 ENV PATH=${SUPERSET_VIRTUALENV}/bin:$PATH \
     PYTHONUNBUFFERED=1
 
-ADD db_deps.txt /db_deps.txt
-ADD other_deps.txt /other_deps.txt
-ADD entrypoint.sh /entrypoint.sh
+WORKDIR ${SUPERSET_USER_HOME}
+
+ADD db_deps.txt .
+ADD other_deps.txt .
+ADD entrypoint.sh .
 ADD superset_config.py ${SUPERSET_CONFIG_PATH}
 
 RUN apt-get update && \
@@ -27,11 +29,14 @@ RUN apt-get update && \
                        procps \
                        netcat && \
     pip install --upgrade setuptools pip virtualenv && \
-    mkdir -p ${SUPERSET_VIRTUALENV} && \
+    addgroup superset && adduser --disabled-password --gecos "" --ingroup superset superset && \
+    mkdir -p ${SUPERSET_USER_HOME} && \
+    mkdir -p ${SUPERSET_HOME} ${SUPERSET_VIRTUALENV} && \
     virtualenv -p python3 ${SUPERSET_VIRTUALENV} && \
     ${SUPERSET_VIRTUALENV}/bin/pip install apache-superset && \
     ${SUPERSET_VIRTUALENV}/bin/pip install -r other_deps.txt && \
     ${SUPERSET_VIRTUALENV}/bin/pip install -r db_deps.txt && \
-    chmod +x entrypoint.sh
+    chmod +x entrypoint.sh && \
+    chown -R superset:superset ${SUPERSET_USER_HOME}
 
 ENTRYPOINT ["./entrypoint.sh"]
