--- a/.github/workflows/docker_publish.yml
+++ b/.github/workflows/docker_publish.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: actions/checkout@v1
       - run: echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{secrets.DOCKER_USERNAME}} --password-stdin
       - run: docker build -q -t ${{secrets.DOCKER_USERNAME}}/superset:dev src/
-      - run: docker push ${{secrets.DOCKER_USERNAME}}/superset:dev
-      - run: docker rmi ${{secrets.DOCKER_USERNAME}}/superset:dev
+      - run: docker push ${{secrets.DOCKER_USERNAME}}/superset
+      - run: docker rmi ${{secrets.DOCKER_USERNAME}}/superset
