--- a/docker/docker-compose-prod-redis.yml
+++ b/docker/docker-compose-prod-redis.yml
@@ -1,7 +1,7 @@
 version: "3.5"
 services:
   superset-webserver:
-    image: mpolatcan/superset:dev
+    image: mpolatcan/superset
     container_name: superset-webserver
     hostname: superset-webserver
     env_file:
@@ -11,28 +11,12 @@ services:
         init
         webserver
         flower
-      # TODO Cache warmup configuration will be tested
-      CACHE_WARMUPS: |
-        [
-          {
-            "schedule": "* * * * *",
-            "kwargs": {"strategy": "dummy"}
-          },
-          {
-            "schedule": "* * * * *",
-            "kwargs": {"strategy": "top_n_dashboards", "top_n": 5, "since": "7 days ago"}
-          },
-          {
-            "schedule": "* * * * *",
-            "kwargs": {"strategy": "dashboard_tags", "tags": ["a", "b", "c"]}
-          }
-        ]
     ports:
       - 8088:8088
       - 5555:5555
 
   superset-worker:
-    image: mpolatcan/superset:dev
+    image: mpolatcan/superset
     env_file:
       - prod-redis.env
     environment:
