--- a/.github/workflows/docker_publish.yml
+++ b/.github/workflows/docker_publish.yml
@@ -6,11 +6,37 @@ on:
       - master
 
 jobs:
-  build-image:
+  build-base-image:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        repository: [superset]
+        python_version: [3.7]
+    steps:
+       - uses: actions/checkout@v1
+       - run: echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{secrets.DOCKER_USERNAME}} --password-stdin
+       - run: docker build -q
+              -t ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:base-python${{matrix.python_version}}
+              --build-arg PYTHON_VERSION=${{matrix.python_version}}
+              src/base
+       - run: docker push ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:base-python${{matrix.python_version}}
+       - run: docker rmi ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:base-python${{matrix.python_version}}
+
+  build-setup-image:
+    runs-on: ubuntu-latest
+    needs: build-base-image
+    strategy:
+      matrix:
+        repository: [superset]
+        python_version: [3.7]
+        superset_version: [0.37.0]
     steps:
       - uses: actions/checkout@v1
       - run: echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{secrets.DOCKER_USERNAME}} --password-stdin
-      - run: docker build -q -t ${{secrets.DOCKER_USERNAME}}/superset src/
-      - run: docker push ${{secrets.DOCKER_USERNAME}}/superset
-      - run: docker rmi ${{secrets.DOCKER_USERNAME}}/superset
+      - run: docker build -q
+          -t ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:${{matrix.superset_version}}-python${{matrix.python_version}}
+          --build-arg PYTHON_VERSION=${{matrix.python_version}}
+          --build-arg SUPERSET_VERSION=${{matrix.superset_version}}
+          src/setup
+      - run: docker push ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:${{matrix.superset_version}}-python${{matrix.python_version}}
+      - run: docker rmi ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:${{matrix.superset_version}}-python${{matrix.python_version}}
