superset configuration updated

--- a/docker/docker-compose-prod-redis.yml
+++ b/docker/docker-compose-prod-redis.yml
@@ -1,7 +1,7 @@
 version: "3.5"
 services:
   superset-webserver:
-    image: mpolatcan/superset
+    image: mpolatcan/superset:0.37.0-python3.7
     container_name: superset-webserver
     hostname: superset-webserver
     env_file:
@@ -16,7 +16,7 @@ services:
       - 5555:5555
 
   superset-worker:
-    image: mpolatcan/superset
+    image: mpolatcan/superset:0.37.0-python3.7
     env_file:
       - prod-redis.env
     environment:
