--- a/docker/prod-redis.env
+++ b/docker/prod-redis.env
@@ -1,6 +1,6 @@
 METADATA_DB_TYPE=postgresql
 METADATA_DB_HOST=postgres
-METADATA_DBi_PORT=5432
+METADATA_DB_PORT=5432
 METADATA_DB_USERNAME=admin
 METADATA_DB_PASSWORD=admin
 METADATA_DB_DATABASE=admin
@@ -19,7 +19,10 @@ CACHE_CONFIG_CACHE_REDIS_DB=1
 TABLE_NAMES_CACHE_CONFIG_CACHE_TYPE=redis
 TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_HOST=redis
 TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS-DB=2
-FEATURE_FLAG_SQLLAB_BACKEND_PERSISTENCE=true
 LOAD_EXAMPLES=false
+ENABLE_REACT_CRUD_VIEWS=true
 FEATURE_FLAG_SIP_38_VIZ_REARCHITECTURE=true
+FEATURE_FLAG_SQLLAB_BACKEND_PERSISTENCE=true
+FEATURE_FLAG_LIST_VIEWS_SIP34_FILTER_UI=true
 CACHE_WARMUPS=[{"schedule": "* * * * *", "kwargs": {"strategy": "dummy"}},{"schedule": "* * * * *","kwargs": {"strategy": "top_n_dashboards", "top_n": 5, "since": "7 days ago"}},{"schedule": "* * * * *","kwargs": {"strategy": "dashboard_tags", "tags": ["a", "b", "c"]}}]
+APP_ICON=/static/assets/images/superset-logo-horiz.png
