--- a/docker/prod-memcached.env
+++ b/docker/prod-memcached.env
@@ -1,16 +1,28 @@
+# =================== METADATA DB SETTINGS ===============
 METADATA_DB_TYPE=postgresql
 METADATA_DB_HOST=postgres
 METADATA_DB_PORT=5432
 METADATA_DB_USERNAME=admin
 METADATA_DB_PASSWORD=admin
 METADATA_DB_DATABASE=admin
+
+# ================== CELERY SETTINGS ====================
 CELERY_BROKER_TYPE=redis
 CELERY_BROKER_HOST=redis
 CELERY_BROKER_PORT=6379
 CELERY_BROKER_DATABASE=0
-RESULTS_BACKEND_TYPE=memcached
-RESULTS_BACKEND_MEMCACHED_SERVERS=docker_memcached_1:11211,docker_memcached_2:11211,docker_memcached_3:11211
+
+CELERY_RESULT_BACKEND_TYPE=memcached
+CELERY_RESULT_BACKEND_MEMCACHED_SERVERS=docker_memcached_1:11211,docker_memcached_2:11211,docker_memcached_3:11211
+
+# ================= SUPERSET SETTINGS =====================
 SUPERSET_MAX_RETRY_TIMES=-1
-FEATURE_FLAG_SQLLAB_BACKEND_PERSISTENCE=true
-LOAD_EXAMPLES=true
+
+SUPERSET_RESULTS_BACKEND_TYPE=memcached
+SUPERSET_MEMCACHED_RESULTS_BACKEND_SERVERS=docker_memcached_1:11211,docker_memcached_2:11211,docker_memcached_3:11211
+
+LOAD_EXAMPLES=false
+ENABLE_REACT_CRUD_VIEWS=true
 FEATURE_FLAG_SIP_38_VIZ_REARCHITECTURE=true
+FEATURE_FLAG_SQLLAB_BACKEND_PERSISTENCE=true
+FEATURE_FLAG_LIST_VIEWS_SIP34_FILTER_UI=true
