--- a/docker/prod-redis.env
+++ b/docker/prod-redis.env
@@ -1,27 +1,38 @@
+# =================== METADATA DB SETTINGS ===============
 METADATA_DB_TYPE=postgresql
 METADATA_DB_HOST=postgres
 METADATA_DB_PORT=5432
 METADATA_DB_USERNAME=admin
 METADATA_DB_PASSWORD=admin
 METADATA_DB_DATABASE=admin
+
+# ================== CELERY SETTINGS ====================
 CELERY_BROKER_TYPE=redis
 CELERY_BROKER_HOST=redis
 CELERY_BROKER_PORT=6379
 CELERY_BROKER_DATABASE=0
-RESULTS_BACKEND_TYPE=redis
-RESULTS_BACKEND_REDIS_HOST=redis
-RESULTS_BACKEND_REDIS_DB=0
+CELERY_RESULT_BACKEND_TYPE=redis
+CELERY_REDIS_RESULT_BACKEND_HOST=redis
+CELERY_REDIS_RESULT_BACKEND_DB=0
+
+# ================= SUPERSET SETTINGS =====================
 SUPERSET_MAX_RETRY_TIMES=-1
+
+SUPERSET_RESULTS_BACKEND_TYPE=redis
+SUPERSET_REDIS_RESULTS_BACKEND_HOST=redis
+SUPERSET_REDIS_RESULTS_BACKEND_DB=1
+
 ENABLE_CACHE_WARMUP=true
 CACHE_CONFIG_CACHE_TYPE=redis
 CACHE_CONFIG_CACHE_REDIS_HOST=redis
-CACHE_CONFIG_CACHE_REDIS_DB=1
+CACHE_CONFIG_CACHE_REDIS_DB=2
 TABLE_NAMES_CACHE_CONFIG_CACHE_TYPE=redis
 TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_HOST=redis
-TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_DB=2
+TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_DB=3
+CACHE_WARMUPS=[{"schedule": "* * * * *", "kwargs": {"strategy": "dummy"}},{"schedule": "* * * * *","kwargs": {"strategy": "top_n_dashboards", "top_n": 5, "since": "7 days ago"}},{"schedule": "* * * * *","kwargs": {"strategy": "dashboard_tags", "tags": ["a", "b", "c"]}}]
+
 LOAD_EXAMPLES=false
 ENABLE_REACT_CRUD_VIEWS=true
 FEATURE_FLAG_SIP_38_VIZ_REARCHITECTURE=true
 FEATURE_FLAG_SQLLAB_BACKEND_PERSISTENCE=true
 FEATURE_FLAG_LIST_VIEWS_SIP34_FILTER_UI=true
-CACHE_WARMUPS=[{"schedule": "* * * * *", "kwargs": {"strategy": "dummy"}},{"schedule": "* * * * *","kwargs": {"strategy": "top_n_dashboards", "top_n": 5, "since": "7 days ago"}},{"schedule": "* * * * *","kwargs": {"strategy": "dashboard_tags", "tags": ["a", "b", "c"]}}]
