docker-compose and kubernetes manifests updated

--- a/docker/prod-memcached.env
+++ b/docker/prod-memcached.env
@@ -13,7 +13,7 @@ CELERY_BROKER_PORT=6379
 CELERY_BROKER_DATABASE=0
 
 CELERY_RESULT_BACKEND_TYPE=memcached
-CELERY_RESULT_BACKEND_MEMCACHED_SERVERS=docker_memcached_1:11211,docker_memcached_2:11211,docker_memcached_3:11211
+CELERY_MEMCACHED_RESULT_BACKEND_SERVERS=docker_memcached_1:11211,docker_memcached_2:11211,docker_memcached_3:11211
 
 # ================= SUPERSET SETTINGS =====================
 SUPERSET_MAX_RETRY_TIMES=-1
@@ -21,7 +21,7 @@ SUPERSET_MAX_RETRY_TIMES=-1
 SUPERSET_RESULTS_BACKEND_TYPE=memcached
 SUPERSET_MEMCACHED_RESULTS_BACKEND_SERVERS=docker_memcached_1:11211,docker_memcached_2:11211,docker_memcached_3:11211
 
-LOAD_EXAMPLES=false
+LOAD_EXAMPLES=true
 ENABLE_REACT_CRUD_VIEWS=true
 FEATURE_FLAG_SIP_38_VIZ_REARCHITECTURE=true
 FEATURE_FLAG_SQLLAB_BACKEND_PERSISTENCE=true
