--- a/docker/prod-redis.env
+++ b/docker/prod-redis.env
@@ -31,7 +31,7 @@ TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_HOST=redis
 TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_DB=3
 CACHE_WARMUPS=[{"schedule": "* * * * *", "kwargs": {"strategy": "dummy"}},{"schedule": "* * * * *","kwargs": {"strategy": "top_n_dashboards", "top_n": 5, "since": "7 days ago"}},{"schedule": "* * * * *","kwargs": {"strategy": "dashboard_tags", "tags": ["a", "b", "c"]}}]
 
-LOAD_EXAMPLES=false
+LOAD_EXAMPLES=true
 ENABLE_REACT_CRUD_VIEWS=true
 FEATURE_FLAG_SIP_38_VIZ_REARCHITECTURE=true
 FEATURE_FLAG_SQLLAB_BACKEND_PERSISTENCE=true
