--- a/k8s/standard/superset-configmap.yaml
+++ b/k8s/standard/superset-configmap.yaml
@@ -13,16 +13,19 @@ data:
   CELERY_BROKER_HOST: "<CELERY_BROKER_HOST>"
   CELERY_BROKER_PORT: "6379"
   CELERY_BROKER_DATABASE: "0"
-  RESULTS_BACKEND_TYPE: "redis"
-  RESULTS_BACKEND_REDIS_HOST: "<RESULTS_BACKEND_REDIS_HOST>"
-  RESULTS_BACKEND_REDIS_DB: "0"
+  CELERY_RESULT_BACKEND_TYPE: "redis"
+  CELERY_REDIS_RESULT_BACKEND_HOST: "<CELERY_REDIS_RESULT_BACKEND_HOST>"
+  CELERY_REDIS_RESULT_BACKEND_DB: "0"
   SUPERSET_MAX_RETRY_TIMES: "-1"
+  SUPERSET_RESULTS_BACKEND_TYPE: "redis"
+  SUPERSET_REDIS_RESULTS_BACKEND_HOST: "<SUPERSET_REDIS_RESULTS_BACKEND_HOST>"
+  SUPERSET_REDIS_RESULTS_BACKEND_DB: "1"
   CACHE_CONFIG_CACHE_TYPE: "redis"
   CACHE_CONFIG_CACHE_REDIS_HOST: "<CACHE_CONFIG_CACHE_REDIS_HOST>"
-  CACHE_CONFIG_CACHE_REDIS_DB: "1"
+  CACHE_CONFIG_CACHE_REDIS_DB: "2"
   TABLE_NAMES_CACHE_CONFIG_CACHE_TYPE: "redis"
   TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_HOST: "<TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_HOST>"
-  TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_DB: "2"
+  TABLE_NAMES_CACHE_CONFIG_CACHE_REDIS_DB: "3"
   LOAD_EXAMPLES: "true"
   ENABLE_REACT_CRUD_VIEWS: "true"
   FEATURE_FLAG_SIP_38_VIZ_REARCHITECTURE: "true"
